--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -36,10 +36,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Delegates.cs" />
+    <Compile Include="Environment.cs" />
     <Compile Include="Helpers\NotFound.cs" />
     <Compile Include="Utils\AsyncResult.cs" />
     <Compile Include="Helpers\Response.cs" />
-    <Compile Include="Owin.cs" />
     <Compile Include="Helpers\InputStream.cs" />
     <Compile Include="Helpers\OutputStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
