--- a/src/Tests/Gate.Tests/Gate.Tests.csproj
+++ b/src/Tests/Gate.Tests/Gate.Tests.csproj
@@ -49,10 +49,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnvironmentTests.cs" />
     <Compile Include="Helpers\NotFoundTests.cs" />
     <Compile Include="Helpers\RequestTests.cs" />
     <Compile Include="Helpers\ResponseTests.cs" />
-    <Compile Include="OwinTests.cs" />
     <Compile Include="Helpers\InputStreamTests.cs" />
     <Compile Include="Helpers\OutputStreamTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
