--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <Compile Include="Delegates.cs" />
     <Compile Include="Environment.cs" />
-    <Compile Include="Helpers\NotFound.cs" />
+    <Compile Include="NotFound.cs" />
     <Compile Include="IApplication.cs" />
     <Compile Include="IMiddleware.cs" />
     <Compile Include="Startup\AppBuilderArgs.cs" />
@@ -46,18 +46,18 @@
     <Compile Include="Startup\ExtUseExtensions.cs" />
     <Compile Include="Startup\ExtMapExtensions.cs" />
     <Compile Include="Utils\AsyncResult.cs" />
-    <Compile Include="Helpers\Response.cs" />
-    <Compile Include="Helpers\InputStream.cs" />
-    <Compile Include="Helpers\OutputStream.cs" />
+    <Compile Include="Response.cs" />
+    <Compile Include="InputStream.cs" />
+    <Compile Include="OutputStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Helpers\Request.cs" />
+    <Compile Include="Request.cs" />
     <Compile Include="Spooling\Spool.cs" />
     <Compile Include="Startup\AppBuilder.cs" />
     <Compile Include="Startup\Loader\DefaultConfigurationLoader.cs" />
     <Compile Include="Startup\Loader\IConfigurationLoader.cs" />
     <Compile Include="Startup\MapExtensions.cs" />
     <Compile Include="Startup\RunExtensions.cs" />
-    <Compile Include="Helpers\UrlMapper.cs" />
+    <Compile Include="UrlMapper.cs" />
     <Compile Include="Startup\UseExtensions.cs" />
     <Compile Include="Utils\Body.cs" />
     <Compile Include="Utils\ParamDictionary.cs" />
