--- a/src/Tests/Gate.Tests/Gate.Tests.csproj
+++ b/src/Tests/Gate.Tests/Gate.Tests.csproj
@@ -50,18 +50,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EnvironmentTests.cs" />
-    <Compile Include="Helpers\NotFoundTests.cs" />
-    <Compile Include="Helpers\RequestTests.cs" />
-    <Compile Include="Helpers\ResponseTests.cs" />
-    <Compile Include="Helpers\InputStreamTests.cs" />
-    <Compile Include="Helpers\OutputStreamTests.cs" />
+    <Compile Include="NotFoundTests.cs" />
+    <Compile Include="RequestTests.cs" />
+    <Compile Include="ResponseTests.cs" />
+    <Compile Include="InputStreamTests.cs" />
+    <Compile Include="OutputStreamTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spooling\SpoolTests.cs" />
     <Compile Include="StartupTests\AppBuilderExtTests.cs" />
     <Compile Include="StartupTests\AppBuilderTests.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="StartupTests\Loader\DefaultConfigurationLoaderTests.cs" />
-    <Compile Include="Helpers\UrlMapperTests.cs" />
+    <Compile Include="UrlMapperTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -80,6 +80,7 @@
       <Name>Gate.TestHelpers</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
