--- a/src/Gate.Helpers/Gate.Helpers.csproj
+++ b/src/Gate.Helpers/Gate.Helpers.csproj
@@ -42,12 +42,14 @@
   <ItemGroup>
     <Compile Include="ContentType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RewindableBody.cs" />
     <Compile Include="ShowExceptions.cs" />
     <Compile Include="ShowExceptions.View.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ShowExceptions.View.tt</DependentUpon>
     </Compile>
+    <Compile Include="Utils\StreamAwaiter.cs" />
     <Compile Include="Wilson.cs" />
   </ItemGroup>
   <ItemGroup>
