--- a/src/Tests/Gate.AspNet.Tests/Gate.AspNet.Tests.csproj
+++ b/src/Tests/Gate.AspNet.Tests/Gate.AspNet.Tests.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="AppHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoteHostClosedStream.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Gate\Gate.csproj">
