--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -40,8 +40,11 @@
     <Compile Include="NotFound.cs" />
     <Compile Include="IApplication.cs" />
     <Compile Include="IMiddleware.cs" />
+    <Compile Include="Startup\AppBuilder.cs" />
     <Compile Include="Startup\AppBuilderArgs.cs" />
     <Compile Include="Startup\AppBuilderExt.cs" />
+    <Compile Include="Startup\Builder\BaseBuilder.cs" />
+    <Compile Include="Startup\Builder\MapBuilder.cs" />
     <Compile Include="Startup\ExtRunExtensions.cs" />
     <Compile Include="Startup\ExtUseExtensions.cs" />
     <Compile Include="Startup\ExtMapExtensions.cs" />
@@ -53,7 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="Spooling\Spool.cs" />
-    <Compile Include="Startup\AppBuilder.cs" />
+    <Compile Include="Startup\Builder\IAppBuilder.cs" />
     <Compile Include="Startup\Loader\DefaultConfigurationLoader.cs" />
     <Compile Include="Startup\Loader\IConfigurationLoader.cs" />
     <Compile Include="Startup\MapExtensions.cs" />
