--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -40,31 +40,31 @@
     <Compile Include="NotFound.cs" />
     <Compile Include="IApplication.cs" />
     <Compile Include="IMiddleware.cs" />
-    <Compile Include="Startup\AppBuilder.cs" />
     <Compile Include="Startup\AppBuilderArgs.cs" />
     <Compile Include="Startup\AppBuilderExt.cs" />
+    <Compile Include="Startup\Builder\AppBuilder.cs" />
     <Compile Include="Startup\Builder\BaseBuilder.cs" />
     <Compile Include="Startup\Builder\MapBuilder.cs" />
-    <Compile Include="Startup\ExtRunExtensions.cs" />
-    <Compile Include="Startup\ExtUseExtensions.cs" />
-    <Compile Include="Startup\ExtMapExtensions.cs" />
-    <Compile Include="Utils\Signal.cs" />
-    <Compile Include="Utils\AsyncResult.cs" />
-    <Compile Include="Response.cs" />
-    <Compile Include="InputStream.cs" />
-    <Compile Include="OutputStream.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Request.cs" />
-    <Compile Include="Spooling\Spool.cs" />
     <Compile Include="Startup\Builder\IAppBuilder.cs" />
     <Compile Include="Startup\Loader\DefaultConfigurationLoader.cs" />
     <Compile Include="Startup\Loader\IConfigurationLoader.cs" />
     <Compile Include="Startup\MapExtensions.cs" />
     <Compile Include="Startup\RunExtensions.cs" />
-    <Compile Include="UrlMapper.cs" />
     <Compile Include="Startup\UseExtensions.cs" />
+    <Compile Include="Startup\ExtRunExtensions.cs" />
+    <Compile Include="Startup\ExtUseExtensions.cs" />
+    <Compile Include="Startup\ExtMapExtensions.cs" />
+    <Compile Include="Utils\AsyncResult.cs" />
     <Compile Include="Utils\Body.cs" />
     <Compile Include="Utils\ParamDictionary.cs" />
+    <Compile Include="Utils\Signal.cs" />
+    <Compile Include="Response.cs" />
+    <Compile Include="InputStream.cs" />
+    <Compile Include="OutputStream.cs" />
+    <Compile Include="Request.cs" />
+    <Compile Include="Spooling\Spool.cs" />
+    <Compile Include="UrlMapper.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
