--- a/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
+++ b/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
@@ -72,5 +72,6 @@
     <Compile Include="ContentTypeTests.cs" />
     <Compile Include="RewindableBodyTests.cs" />
     <Compile Include="ShowExceptionsTests.cs" />
+    <Compile Include="XForwardedForTests.cs" />
   </ItemGroup>
 </Project>
