--- a/src/Tests/Gate.HttpListener.Tests/Gate.HttpListener.Tests.csproj
+++ b/src/Tests/Gate.HttpListener.Tests/Gate.HttpListener.Tests.csproj
@@ -52,9 +52,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Hosts\Gate.HttpListener\Gate.HttpListener.csproj">
+      <Project>{A1A94BF6-7E05-430E-947D-B046A2A00CAF}</Project>
+      <Name>Gate.HttpListener</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Main\Gate.Helpers\Gate.Helpers.csproj">
+      <Project>{85392B05-6564-472B-9A7B-58AFB721F2AE}</Project>
+      <Name>Gate.Helpers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Main\Gate.Owin\Gate.Owin.csproj">
+      <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
+      <Name>Gate.Owin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
