--- a/src/Tests/Gate.HttpListener.Tests/Gate.HttpListener.Tests.csproj
+++ b/src/Tests/Gate.HttpListener.Tests/Gate.HttpListener.Tests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerTests.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
