--- a/src/Tests/Gate.HttpListener.Tests/Gate.HttpListener.Tests.csproj
+++ b/src/Tests/Gate.HttpListener.Tests/Gate.HttpListener.Tests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerTests.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Workaround.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
