--- a/src/Tests/Gate.TestHelpers/packages.config
+++ b/src/Tests/Gate.TestHelpers/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20525.0" />
+  <package id="Microsoft.Net.Http" version="2.0.20525.0" />
+  <package id="Newtonsoft.Json" version="4.5.5" />
   <package id="Owin" version="0.7" />
 </packages>
