--- a/src/Tests/Gate.Tests/Gate.Tests.csproj
+++ b/src/Tests/Gate.Tests/Gate.Tests.csproj
@@ -49,6 +49,12 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http">
+      <HintPath>..\..\..\packages\Microsoft.Net.Http.2.0.20525.0\lib\net40\System.Net.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest">
+      <HintPath>..\..\..\packages\Microsoft.Net.Http.2.0.20525.0\lib\net40\System.Net.Http.WebRequest.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -61,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestTests.cs" />
     <Compile Include="ResponseTests.cs" />
+    <Compile Include="TestClientTests.cs" />
     <Compile Include="UrlMapperTests.cs" />
     <Compile Include="SpoolTests.cs" />
   </ItemGroup>
