--- a/src/Tests/Gate.Tests/packages.config
+++ b/src/Tests/Gate.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Net.Http" version="2.0.20525.0" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="Owin" version="0.7" />
 </packages>
