--- a/src/Main/Gate/Gate.csproj
+++ b/src/Main/Gate/Gate.csproj
@@ -32,9 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Owin, Version=0.8.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
+    <Reference Include="Owin, Version=0.9.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Owin.0.8-ctp1\lib\net40\Owin.dll</HintPath>
+      <HintPath>..\..\..\packages\Owin.0.9-ctp2\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,11 +53,11 @@
     <Compile Include="AppBuilderMapExtensions.cs" />
     <Compile Include="AppBuilderRunExtensions.cs" />
     <Compile Include="AppBuilderUseExtensions.cs" />
-    <Compile Include="Environment.cs" />
     <Compile Include="OwinConstants.cs" />
     <Compile Include="RequestStream.cs" />
     <Compile Include="ResponseStream.cs" />
     <Compile Include="Utils\ParamDictionary.cs" />
+    <Compile Include="Utils\ReasonPhrases.cs" />
     <Compile Include="Utils\Spool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
