--- a/src/Main/Gate/Gate.csproj
+++ b/src/Main/Gate/Gate.csproj
@@ -32,9 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Owin, Version=0.9.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
+    <Reference Include="Owin, Version=0.11.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Owin.0.9-ctp2\lib\net40\Owin.dll</HintPath>
+      <HintPath>..\..\..\packages\Owin.0.11-ctp3\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,25 +43,25 @@
     <Compile Include="..\..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="AppBuilderInlineExtensions.cs" />
+    <None Include="AppBuilderInlineExtensions.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1-ctp1\TaskHelpers.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1-ctp1\TaskHelpersExtensions.cs" />
-    <Compile Include="Headers.cs" />
+    <None Include="Headers.cs" />
     <Compile Include="Mapping\MapBuilder.cs" />
     <Compile Include="Mapping\UrlMapper.cs" />
-    <Compile Include="NotFound.cs" />
+    <None Include="NotFound.cs" />
     <Compile Include="AppBuilderMapExtensions.cs" />
     <Compile Include="AppBuilderRunExtensions.cs" />
     <Compile Include="AppBuilderUseExtensions.cs" />
     <Compile Include="OwinConstants.cs" />
-    <Compile Include="RequestStream.cs" />
-    <Compile Include="ResponseStream.cs" />
-    <Compile Include="Utils\ParamDictionary.cs" />
-    <Compile Include="Utils\ReasonPhrases.cs" />
-    <Compile Include="Utils\Spool.cs" />
+    <None Include="RequestStream.cs" />
+    <None Include="ResponseStream.cs" />
+    <None Include="Utils\ParamDictionary.cs" />
+    <None Include="Utils\ReasonPhrases.cs" />
+    <None Include="Utils\Spool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Request.cs" />
-    <Compile Include="Response.cs" />
+    <None Include="Request.cs" />
+    <None Include="Response.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Gate.Sources.nuspec" />
