--- a/src/Main/Gate/Gate.csproj
+++ b/src/Main/Gate/Gate.csproj
@@ -43,7 +43,7 @@
     <Compile Include="..\..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
-    <None Include="AppBuilderInlineExtensions.cs" />
+    <Compile Include="AppBuilderInlineExtensions.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1-ctp1\TaskHelpers.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1-ctp1\TaskHelpersExtensions.cs" />
     <Compile Include="Headers.cs" />
@@ -53,17 +53,18 @@
     <Compile Include="AppBuilderRunExtensions.cs" />
     <Compile Include="AppBuilderUseExtensions.cs" />
     <Compile Include="OwinConstants.cs" />
-    <None Include="RequestStream.cs" />
-    <None Include="ResponseStream.cs" />
+    <Compile Include="ResponseStream.cs" />
+    <Compile Include="Utils\Net40Extensions.cs" />
     <Compile Include="Utils\ParamDictionary.cs" />
-    <None Include="Utils\ReasonPhrases.cs" />
-    <None Include="Utils\Spool.cs" />
+    <Compile Include="Utils\ReasonPhrases.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
-    <None Include="Response.cs" />
+    <Compile Include="Response.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Gate.Sources.nuspec" />
+    <None Include="Gate.Sources.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Gate.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
