--- a/src/Tests/Gate.Hosts.HttpListener.Tests/packages.config
+++ b/src/Tests/Gate.Hosts.HttpListener.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="2.5.10.11092" />
-  <package id="Owin" version="0.9-ctp2" />
+  <package id="Owin" version="0.11" />
+  <package id="xunit" version="1.9.1" />
 </packages>
