--- a/src/Tests/Gate.Middleware.Tests/packages.config
+++ b/src/Tests/Gate.Middleware.Tests/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="NUnit" version="2.5.10.11092" />
   <package id="Owin" version="0.11" />
+  <package id="TaskHelpers.Sources" version="0.1" />
+  <package id="xunit" version="1.9.1" />
 </packages>
