--- a/src/Hosts/Gate.Hosts.Kayak/packages.config
+++ b/src/Hosts/Gate.Hosts.Kayak/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Kayak" version="0.7.2" />
   <package id="Owin" version="0.11" />
+  <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
